--- a/index.html
+++ b/index.html
@@ -14,38 +14,52 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
+      padding: 1rem;
     }
     img {
-      width: 270px;
+      width: clamp(180px, 40vw, 270px);
       margin-bottom: 40px;
     }
     input[type="text"] {
-      width: 500px;
+      width: 90%;
+      max-width: 550px;
       padding: 12px 20px;
       border: 1px solid #dfe1e5;
       border-radius: 24px;
       font-size: 16px;
       outline: none;
+      transition: all 0.2s ease;
     }
     input[type="text"]:focus {
-      box-shadow: 0 0 4px rgba(66,133,244,0.5);
+      box-shadow: 0 0 6px rgba(66,133,244,0.5);
       border-color: #4285f4;
     }
     .buttons {
-      margin-top: 30px;
+      margin-top: 25px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
     }
     .buttons button {
       background: #f8f9fa;
       border: 1px solid #f8f9fa;
       border-radius: 4px;
-      padding: 10px 18px;
-      margin: 5px;
+      padding: 10px 16px;
       cursor: pointer;
       font-size: 14px;
     }
     .buttons button:hover {
       border: 1px solid #dadce0;
       box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+    }
+    /* Make sure it still looks centered on very short screens */
+    @media (max-height: 600px) {
+      body {
+        justify-content: flex-start;
+        padding-top: 80px;
+      }
     }
   </style>
 </head>
@@ -62,7 +76,7 @@
   </form>
 
   <script>
-    // Redirect any search to your custom result page
+    // Redirect any search to your custom results page
     document.getElementById("searchForm").addEventListener("submit", function(e){
       e.preventDefault();
       const query = document.getElementById("searchInput").value;
